syntax = "proto2";

package chat_pb;

message RPC {
	repeated SubOpts subscriptions = 1;
	repeated Message publish = 2;

	message SubOpts {
		optional bool subscribe = 1;
		optional string topic_id = 2;
	}
}

message Message {
	optional bytes from_peer_id = 1;
	optional string from_name = 2;
	optional string to_name = 3;
	optional bytes data = 4;
	optional bytes seqno = 5;
	repeated string topic_ids = 6;
}
